<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:background="@android:color/background_light"
    tools:context="com.rfs.brabbit.wingman.Intro"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="643dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="InefficientWeight,UselessParent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView2"
                android:layout_weight="0.72"
                android:gravity="center"
                android:text="@string/time_to_play_cupid"
                android:textColor="@android:color/black"
                android:textSize="27sp"
                android:typeface="sans"
                tools:ignore="ObsoleteLayoutParam" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="355dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.72"
                app:srcCompat="@drawable/logo"
                tools:ignore="ContentDescription,ObsoleteLayoutParam" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView4"
                android:layout_marginBottom="25dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical|center"
                    android:text="By signing up, i agree to Wingmans´s"
                    android:typeface="sans"
                    tools:ignore="HardcodedText,RtlHardcoded" />

                <Button
                    android:id="@+id/button_loginWhitFB"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/background_button"
                    android:text="@string/connect_whit_facebook"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:typeface="sans"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/we_don_t_post_anything_to_facebook"
                    android:typeface="sans"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="668dp" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
